,
[eval]:7
  .replace('hover:bg-gray-50 transition-colors text-left border-b border-gray-50 \', 'hover:bg-orange-50 transition-colors text-left border-b border-orange-50 \')
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Expected ',', got 'ident'

SyntaxError: missing ) after argument list
    at makeContextifyScript (node:internal/vm:194:14)
    at compileScript (node:internal/process/execution:388:10)
    at evalTypeScript (node:internal/process/execution:260:22)
    at node:internal/main/eval_string:71:3

Node.js v24.14.1
